--- a/package.json
+++ b/package.json
@@ -5,5 +5,9 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "pg": "^8.11.3"
+  },
+  "type": "module",
+  "scripts": {
+    "start": "node back-end/api.js"
   }
 }
