--- a/back-end/package.json
+++ b/back-end/package.json
@@ -1,4 +1,8 @@
 {
+  "name": "dio-apache-api",
+  "author": {
+    "name": "Samuel Filho"
+  },
   "dependencies": {
     "@types/pg": "^8.10.9",
     "body-parser": "^1.20.2",
@@ -9,6 +13,6 @@
   },
   "type": "module",
   "scripts": {
-    "start": "node back-end/api.js"
+    "start": "node api.js"
   }
 }
