--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,11 +3,12 @@ version: "3.8"
 services:
   web:
     image: httpd
-    container_name: dio-apache
+    container_name: dio_apache
     ports:
       - "80:80"
     volumes:
       - C:\Projetos\dio\dio-docker-apache\front-end:/usr/local/apache2/htdocs
+      - C:\Projetos\dio\dio-docker-apache\front-end\httpd.conf:/usr/local/apache2/conf/httpd.conf
     networks:
       - apache-net
   api:
@@ -15,9 +16,8 @@ services:
     container_name: api
     ports:
       - "3000:3000"
-    volumes:
-      - C:\Projetos\dio\dio-docker-apache:/usr/src/app/data
-
+    networks:
+      - apache-net
   db:
     image: postgres:14-alpine
     container_name: database
