--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
     ports:
       - "80:80"
     volumes:
-      - apache_data:/usr/local/apache2/htdocs
+      - ./front-end:/usr/local/apache2/htdocs
     networks:
       - apache-net
   api:
@@ -38,7 +38,6 @@ services:
 
 volumes:
   db_data:
-  apache_data:
 
 
 networks:
